--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "preact": "^8.3.1",
     "preact-compat": "^3.18.4",
     "react-app-polyfill": "^0.1.3",
+    "react-dates": "^18.2.2",
     "react-dev-utils": "^6.1.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
